26.5.7快照1.1.1 修了一堆bug，更改ai对话窗口ui